--- a/css/responsive.css
+++ b/css/responsive.css
@@ -94,9 +94,13 @@
   #team .single-team .team-social-icons {
     bottom: 27%;
   }
+  
   #blog .blog-item-wrapper h3 {
     font-size: 16px;
     line-height: 23px;
+  }
+  #blog .blog-item-wrapper {
+    margin-bottom: 60px;
   }
   #footer-Content h3.block-title {
     font-size: 16px;
@@ -175,6 +179,9 @@
   .services-item {
     margin-bottom: 20px;
   }
+  #blog .blog-item-wrapper {
+    margin-bottom: 60px;
+  }
   .contact-img img {
     max-width: 100%;
     display: block;
@@ -227,6 +234,7 @@
   #testimonial .testimonial-area {
     width: 98%;
   }
+
 }
 
 @media only screen and (max-width: 767px) {
@@ -412,6 +420,7 @@
   #team .single-team .team-social-icons {
     bottom: 22%;
   }
+ 
   #blog .blog-item-wrapper .blog-item-text {
     padding: 20px 15px 15px 15px;
   }
@@ -422,7 +431,7 @@
     margin-bottom: 12px;
   }
   #blog .blog-item-wrapper {
-    margin-bottom: 15px;
+    margin-bottom: 60px;
   }
   #footer-Content .copyright p {
     color: #fff;
@@ -615,6 +624,9 @@
   }
   #blog .blog-item-wrapper a.read-more {
     font-size: 12px;
+  }
+  #blog .blog-item-wrapper {
+    margin-bottom: 60px;
   }
   #footer-Content {
     padding-top: 100px;
