--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,22 +2,27 @@
   #showcase {
     padding-bottom: 530px;
   }
+
   #showcase .showcase-area {
     width: 98%;
   }
+
   #showcase .showcase-slider .screenshot-thumb p {
     color: #fff;
     font-size: 20px;
     font-style: italic;
     margin-bottom: 10px;
   }
+
   #showcase .showcase-slider .screenshot-thumb .fancy-table {
     padding-top: 165px !important;
   }
-  #showcase .showcase-slider .screenshot-thumb > .hover-content {
+
+  #showcase .showcase-slider .screenshot-thumb>.hover-content {
     width: 89% !important;
     height: 89% !important;
   }
+
   .hero-area .overlay :nth-child(1) {
     height: 294px !important;
   }
@@ -27,15 +32,19 @@
   .hero-area .contents {
     padding: 280px 0 390px;
   }
+
   .hero-area .overlay :nth-child(1) {
     height: 250px;
   }
+
   .showcase-slider .owl-item img {
     width: 100%;
   }
-  #showcase .showcase-slider .screenshot-thumb > .hover-content {
+
+  #showcase .showcase-slider .screenshot-thumb>.hover-content {
     width: 85%;
   }
+
   #showcase .showcase-slider .screenshot-thumb .fancy-table {
     padding-top: 100px;
   }
@@ -45,76 +54,91 @@
   .bg-inverse {
     background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
   }
+
   .hero-area .contents h2 {
     font-size: 38px;
   }
+
   .navbar-expand-md .navbar-nav .nav-link {
     padding: 12px 5px;
     font-size: 13px;
     margin-left: 15px;
   }
+
   .hero-area .contents {
     padding: 210px 0 280px;
   }
-  #business-plan .business-item-info h3 {
-    font-size: 28px;
+
+  .hero-area .intro-img {
+    padding: 210px 0 280px;
   }
-  #business-plan .business-item-info p {
-    font-size: 13px;
-    margin-bottom: 20px;
-  }
+
   .section {
     padding: 80px 0px;
   }
+
   #business-plan {
     padding: 15px 0px;
     padding-bottom: 80px;
   }
+
   .feature-info {
     width: 60%;
   }
+
   #features .feature-item {
     padding: 15px;
   }
+
   #features .feature-item h4 {
     margin-bottom: 10px;
   }
+
   #showcase .gradient-bg {
     padding: 80px 0px 60px 0px;
   }
+
   #pricing {
     padding-bottom: 80px;
   }
+
   #testimonial #client-testimonial .content-inner p {
     font-size: 18px;
     color: #5e629c;
     font-style: italic;
     line-height: 35px;
   }
+
   #team .single-team .team-social-icons {
     bottom: 27%;
   }
-  
+
   #blog .blog-item-wrapper h3 {
     font-size: 16px;
     line-height: 23px;
   }
+
   #blog .blog-item-wrapper {
     margin-bottom: 60px;
   }
+
   #footer-Content h3.block-title {
     font-size: 16px;
   }
+
   #footer-Content ul.menu li a {
     font-size: 14px;
     line-height: 31px;
   }
+
   #footer-Content {
     padding-top: 80px;
   }
+
   #footer-Content .copyright {
     margin-top: 80px;
   }
+
   .hero-area .contents h2 {
     color: #fff;
     font-size: 40px;
@@ -122,84 +146,130 @@
     line-height: 60px;
     margin-bottom: 20px;
   }
+
   #testimonial .testimonial-area {
     width: 98%;
   }
-  #showcase .showcase-slider .screenshot-thumb > .hover-content {
+
+  #showcase .showcase-slider .screenshot-thumb>.hover-content {
     height: 80%;
     width: 80%;
   }
+
   #showcase .showcase-slider .screenshot-thumb .fancy-table {
     padding-top: 45px;
   }
+
   #footer-Content h3.block-title {
     margin-bottom: 20px;
     margin-top: 20px;
   }
 }
 
+@media (max-width: 820px) {
+  #business-plan .business-item {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  #business-plan .business-item-img,
+  #business-plan .business-item-info {
+    flex: 100%;
+    padding: 0;
+  }
+
+  #business-plan .business-item-info {
+    margin-top: 20px;
+  }
+}
+
+/* Gaya untuk perangkat dengan lebar 768px atau kurang */
+@media (max-width: 768px) {
+  #business-plan .business-item-img img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+
+
 @media (min-width: 768px) and (max-width: 991px) {
   .bg-inverse {
     background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
   }
+
   #business-plan .business-item-info h3 {
     font-size: 25px;
   }
+
   #business-plane .business-item-info p {
     font-size: 15px;
     line-height: 24px;
     margin-bottom: 17px;
   }
+
   .hero-area .contents h2 {
     color: #fff;
     font-size: 40px !important;
   }
+
   .navbar-expand-md .navbar-nav .nav-link {
     padding: 12px 0px;
     font-size: 13px;
     margin-left: 12px;
   }
-  
+
   .hero-area .contents {
     padding: 200px 0 0px;
   }
+
   #features .feature-item p {
     font-size: 14px;
     display: block;
     line-height: 25px;
   }
+
   #pricing .pricing-table {
     padding: 30px 15px;
   }
+
   #pricing .pricing-table h1 span {
     left: 10%;
   }
+
   #team .single-team,
   .blog-item-wrapper,
   .services-item {
     margin-bottom: 20px;
   }
+
   #blog .blog-item-wrapper {
     margin-bottom: 60px;
   }
+
   .contact-img img {
     max-width: 100%;
     display: block;
     margin: 0px auto;
   }
+
   #footer-Content .footer-logo img {
     padding-top: 0;
   }
+
   #footer-Content .copyright p {
     color: #3ecf8e;
     font-size: 14px;
   }
+
   .hero-area .intro-img {
     padding: 100px 0 0px;
   }
+
   .blog-hero-area .contents h2 {
     font-size: 36px;
   }
+
   .btn-singin {
     background: #7fc9fb;
     color: #fff;
@@ -208,6 +278,7 @@
     box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17);
     font-size: 11px;
   }
+
   .btn-light-singin {
     background: #7fc9fb;
     color: #fff;
@@ -216,49 +287,64 @@
     box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17);
     font-size: 11px;
   }
+
   .navbar-expand-md .navbar-nav .nav-link {
     padding: 12px 0px;
     font-size: 13px;
     margin-left: 9px;
   }
+
   .pt-70 {
     padding-top: 20px;
   }
+
   .showcase-area .pr-0,
   .px-0 {
     padding-right: 15px !important;
   }
+
   #showcase {
     padding-bottom: 275px;
   }
+
   #testimonial .testimonial-area {
     width: 98%;
   }
 
+  .section-header .section-title {
+    padding-bottom: 10px;
+    font-size: 25px;
+  }
 }
 
 @media only screen and (max-width: 767px) {
   .bg-inverse {
     background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
   }
+
   .navbar-expand-md .navbar-brand,
   .navbar-expand-md .navbar-toggler {
     margin: 6px 15px;
   }
+
   .bg-inverse {
     background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
   }
+
   .navbar {
     padding: 0;
   }
+
   .navbar-brand img {
     width: 100px;
   }
+
   .hero-area .contents h2 {
     font-size: 25px;
     line-height: 35px;
     margin-bottom: 10px;
   }
+
   .hero-area .contents {
     padding: 120px 0 50px;
     margin-left: 8px;
@@ -269,16 +355,20 @@
   .bg-inverse {
     background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
   }
+
   .navbar {
     padding: 0;
   }
+
   .navbar-brand img {
     width: 100px;
   }
+
   .navbar-expand-md .navbar-brand,
   .navbar-expand-md .navbar-toggler {
     margin: 6px 15px;
   }
+
   .navbar-expand-md .navbar-nav .page-scroll-button {
     padding: 12px 0px;
     font-size: 13px;
@@ -286,6 +376,7 @@
     margin-top: 10px;
     width: 30%;
   }
+
   .btn-singin {
     background: transparent;
     color: #fff;
@@ -293,21 +384,24 @@
     margin-left: 0;
     box-shadow: 0px 0px 0px 0px rgba(96, 94, 94, 0.17);
   }
+
   .hero-area .contents h2 {
     font-size: 25px;
     line-height: 35px;
     margin-bottom: 10px;
   }
+
   .hero-area .contents {
     padding: 120px 0 50px;
     margin-left: 8px;
   }
-  
+
   .hero-area .contents p {
     color: #fff;
     font-size: 16px;
     line-height: 26px;
   }
+
   .hero-area .contents .btn {
     margin-top: 25px;
     /* margin-right: 4px;
@@ -317,6 +411,7 @@
     padding: 15px 14px;
     font-size: 12px; */
   }
+
   .hero-area .contents .btn-border {
     border: 1px solid #fff;
     color: #fff;
@@ -326,83 +421,105 @@
     height: 45px;
     padding: 15px 15px;
   }
+
   .hero-area .intro-img {
     padding: 30px 0 0px;
   }
+
   .section {
     padding: 70px 0px;
   }
+
   #services .services-item {
     padding: 30px 15px;
     margin-bottom: 15px;
   }
+
   #business-plan .business-item-info h3 {
     font-size: 25px;
   }
+
   .section-header .section-title {
     padding-bottom: 20px;
     font-size: 25px;
   }
+
   #services .services-item p {
     font-size: 14px;
   }
+
   #business-plane .business-item-info p {
     font-size: 15px;
     line-height: 24px;
     margin-bottom: 17px;
   }
+
   .section-header .desc-text p {
     font-size: 16px;
     /* color: #5e629c; */
     line-height: 24px;
     margin-bottom: 0;
   }
+
   #features .feature-item {
     padding: 10px;
   }
+
   #features .feature-item .feature-icon {
     margin-bottom: 10px;
     margin-top: 10px;
   }
+
   #features .feature-item p {
     font-size: 15px;
     display: block;
   }
+
   .showcase-area .pr-0,
   .px-0 {
     padding-right: 15px !important;
   }
+
   #showcase {
     padding-bottom: 250px;
   }
+
   #pricing .pricing-table h1 span {
     left: 4%;
   }
+
   #pricing .pricing-table {
-    position: relative; /* Tambahkan posisi relatif untuk pricing-table */
+    position: relative;
+    /* Tambahkan posisi relatif untuk pricing-table */
     padding: 20px;
     border-radius: 25px;
     margin-bottom: 25px;
     border: 1px solid #ccc;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Menambahkan bayangan */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Menambahkan bayangan */
     transition: all 0.8s ease;
   }
+
   #testimonial #client-testimonial {
     padding: 30px 10px;
   }
+
   #testimonial #client-testimonial .content-inner p {
     font-size: 15px;
     line-height: 22px;
   }
+
   #testimonial #client-testimonial .author-info h5 {
     color: #151948;
     font-size: 15px;
   }
+
   #testimonial #client-testimonial h5 span {
     font-size: 13px;
     color: #5e629c;
     font-style: italic;
   }
+
   #testimonial .testimonial-area {
     position: inherit;
     width: 100%;
@@ -410,39 +527,47 @@
     top: 0;
     margin: 0px auto;
   }
+
   #testimonial {
     margin-bottom: 0;
     background-size: cover;
   }
+
   #team .single-team {
     margin-bottom: 15px;
   }
+
   #team .single-team .team-social-icons {
     bottom: 22%;
   }
- 
+
   #blog .blog-item-wrapper .blog-item-text {
     padding: 20px 15px 15px 15px;
   }
+
   #blog .blog-item-wrapper h3 {
     font-size: 18px;
     font-weight: 600;
     line-height: 25px;
     margin-bottom: 12px;
   }
+
   #blog .blog-item-wrapper {
     margin-bottom: 60px;
   }
+
   #footer-Content .copyright p {
     color: #fff;
     font-size: 12px;
   }
+
   #footer-Content ul.menu li a {
     color: #e2e2e2;
     font-size: 14px;
     font-weight: 400;
     line-height: 30px;
   }
+
   #footer-Content h3.block-title {
     color: #fff;
     font-size: 18px;
@@ -450,50 +575,63 @@
     margin-bottom: 15px;
     margin-top: 15px;
   }
+
   #footer-Content .footer-logo img {
     padding-top: 0;
   }
+
   #footer-Content {
     padding-top: 30px;
     /* background: #180e29; */
     background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
   }
+
   #footer-Content .copyright {
     padding-top: 0px;
     padding-bottom: 15px;
   }
+
   #footer-Content .footer-logo img {
     padding-top: 0;
     width: 40%;
   }
+
   #blog .blog-item-wrapper .author {
     border-top: 1px solid #ddd;
     padding: 18px 10px 15px 10px;
   }
+
   .owl-theme .owl-controls {
     display: none !important;
   }
+
   #business-plane {
     padding-bottom: 40px;
   }
+
   #showcase .showcase-area {
     width: 90%;
   }
+
   #light-featured .light-feature-item .light-feature-icon {
     margin-bottom: 20px;
   }
+
   #light-featured .right-feature-info h3 {
     font-size: 25px;
     line-height: 35px;
   }
+
   #light-featured .light-feature-item .light-feature-info p {
     font-size: 15px;
     display: block;
   }
+
   #download-app .download-info h3 {
     font-size: 25px;
     line-height: 38px;
   }
+
   #download-app .download-info .downlaod-btn a.play-store {
     width: 195px;
     height: 65px;
@@ -501,68 +639,91 @@
     margin-right: 0;
     margin-bottom: 20px;
   }
+
   .download-statatics {
     text-align: center;
     margin-bottom: 15px;
   }
+
   #client-talk .client-words {
     padding: 20px;
     margin-bottom: 15px;
   }
+
   #footer-Content .copyright {
     margin-top: 30px;
   }
+
   .blog-hero-area .contents h2 {
     color: #fff;
     font-size: 25px;
   }
+
   .blog-hero-area .contents {
     padding: 100px 0 90px;
   }
+
   #brand-area .brand-subtitle h5 {
     font-size: 18px;
   }
+
   #brand-area {
     padding: 50px 0px 60px 0;
   }
+
   #light-featured {
     padding-bottom: 50px;
     padding-top: 100px;
   }
+
   #light-featured .light-feature-item .light-feature-info h4 {
     font-size: 18px;
   }
+
   #light-featured .right-feature-info h3 {
     font-size: 20px;
     line-height: 30px;
   }
+
   #light-featured .right-feature-info p {
     font-size: 15px;
   }
+
   #showcase .showcase-slider .screenshot-thumb .fancy-table {
     padding-top: 50px;
   }
-  #showcase .showcase-slider .screenshot-thumb > .hover-content {
+
+  #showcase .showcase-slider .screenshot-thumb>.hover-content {
     height: 81%;
     width: 80%;
   }
+
   #footer-Content h3.block-title {
     margin-bottom: 18px;
     margin-top: 15px;
   }
+
   .back-to-top {
     display: none !important;
   }
+
+  .row-pricing-tables {
+    margin-top: 0px;
+    overflow-x: auto;
+  }
+
 }
 
 @media (min-width: 375px) and (max-width: 667px) {
-  #showcase .showcase-slider .screenshot-thumb > .hover-content {
+  #showcase .showcase-slider .screenshot-thumb>.hover-content {
     height: 83%;
     width: 83%;
   }
+
   #showcase .showcase-slider .screenshot-thumb .fancy-table {
     padding-top: 68px;
   }
+
   #pricing .pricing-table h1 span {
     left: 16%;
   }
@@ -572,10 +733,12 @@
   #showcase .showcase-slider .screenshot-thumb .fancy-table {
     padding-top: 80px;
   }
-  #showcase .showcase-slider .screenshot-thumb > .hover-content {
+
+  #showcase .showcase-slider .screenshot-thumb>.hover-content {
     height: 85%;
     width: 85%;
   }
+
   #pricing .pricing-table h1 span {
     left: 20%;
   }
@@ -587,9 +750,11 @@
     padding: 8px 0px;
     margin-left: 18px;
   }
+
   .hero-area .contents h2 {
     font-size: 38px;
   }
+
   #light-featured .right-feature-info h3 {
     font-size: 29px;
     font-weight: 600;
@@ -597,69 +762,89 @@
     line-height: 40px;
     margin-top: 0;
   }
+
   #light-featured .light-feature-item .light-feature-icon {
     margin-bottom: 15px;
   }
+
   #light-featured {
     padding-bottom: 100px;
     padding-top: 100px;
   }
+
   .section {
     padding: 100px 0px;
   }
+
   .feature-info {
     width: 80%;
   }
+
   .feature-info {
     width: 68%;
   }
+
   #team .single-team .team-social-icons {
     bottom: 27%;
   }
+
   #blog .blog-item-wrapper .blog-item-text {
     padding: 20px 15px 15px 15px;
   }
+
   #blog .blog-item-wrapper h3 {
     font-size: 18px;
   }
+
   #blog .blog-item-wrapper a.read-more {
     font-size: 12px;
   }
+
   #blog .blog-item-wrapper {
     margin-bottom: 60px;
   }
+
   #footer-Content {
     padding-top: 100px;
   }
+
   #footer-Content .copyright {
     margin-top: 100px;
   }
+
   .hero-area .contents p {
     color: #fff;
     font-size: 16px;
     line-height: 26px;
   }
+
   .hero-area2 .contents p {
     color: #fff;
     font-size: 16px;
     line-height: 26px;
   }
+
   #business-plane .business-item-info h3 {
     font-size: 29px;
   }
+
   .showcase-area .pr-0,
   .px-0 {
     padding-right: 15px !important;
   }
+
   #showcase {
     padding-bottom: 280px;
   }
+
   #pricing .pricing-table h1 span {
     left: 10%;
   }
+
   #pricing2 .pricing-table h1 span {
     left: 10%;
   }
+
   #testimonial #client-testimonial .content-inner p {
     font-size: 20px;
     color: #5e629c;
